--- a/web/templates/systemStatus.html
+++ b/web/templates/systemStatus.html
@@ -3,87 +3,92 @@ $var jsfiles: systemStatus.js
 $var cssfiles:
 
 <div id="left_panel">
-    <div class="left_tooltip">
-        <img src="/static/images/system-status-192x192.png" alt="" />
-        <div id="left_tooltip_box_outer">
-            <div id="left_tooltip_box_inner">
-                <p>
-                    The system status display shows up to
-                    the minute information on system components, services and users.
-                </p>
-                <p>
-                    Rows which highlight on mouse-over will display more detailed data when clicked.
-                </p>
-                <p>
-                    Data updates automatically every 30 seconds. To refresh the data manually, <a href="#" onclick="GetData();">click here</a>.
-                </p>
-            </div>
-        </div>
-    </div>
+	<div class="left_tooltip">
+		<img src="/static/images/system-status-192x192.png" alt="" />
+		<div id="left_tooltip_box_outer">
+			<div id="left_tooltip_box_inner">
+				<p>
+					The system status display shows up to
+					the minute information on system components, services and users.
+				</p>
+				<p>
+					Rows which highlight on mouse-over will display more detailed data when clicked.
+				</p>
+				<p>
+					Data updates automatically every 30 seconds. To refresh the data manually, <a href="#" onclick="GetData();">click here</a>.
+				</p>
+			</div>
+		</div>
+	</div>
 </div>
 <div id="content" style="padding-top: 20px;">
-    <div class="ui-widget-content ui-corner-all">
-        <div class="ui-widget-header">
-            <span>System Components</span>
-        </div>
-        <div style="padding: 10px;">
-            <table class="jtable" cellspacing="1" cellpadding="1" width="95%">
-                <thead>
-                    <tr>
-                        <th align="left"> Component </th>
-                        <th align="left"> Instance </th>
-                        <th align="left"> Load </th>
-                        <th align="left"> Heartbeat </th>
-                        <th align="left"> Enabled? </th>
-                        <th align="left"> Minutes Since Last Report </th>
-                        <th align="left"> Log <span class="ui-icon ui-icon-info forceinline" title="Logfiles may not be available for all processes."></span></th>
-                    </tr>
-                </thead>
-                <tbody id="processes"></tbody>
-            </table>
-        </div>
-    </div>
-    <br />
-    <div class="ui-widget-content ui-corner-all">
-        <div class="ui-widget-header">
-            <span>Current Users</span><span class="security_log_link pointer" id="show_log_link"> <img alt="" src="/static/images/icons/view_text_16.png" /> View Login History</span>
-        </div>
-        <div style="padding: 10px;">
-            <table class="jtable" cellspacing="1" cellpadding="1" width="95%">
-                <thead>
-                    <tr>
-                        <th align="left"> User </th>
-                        <th align="left"> Login Time </th>
-                        <th align="left"> Last Update </th>
-                        <th align="left"> Address </th>
-                        <th align="left"> Status </th>
-                    </tr>
-                </thead>
-                <tbody id="users"></tbody>
-            </table>
-        </div>
-    </div>
-    <br />
-    <div class="ui-widget-content ui-corner-all">
-        <div class="ui-widget-header">
-            <span>Messenger Queue</span>
-        </div>
-        <div style="padding: 10px;">
-            <table class="jtable" cellspacing="1" cellpadding="1" width="95%">
-                <thead>
-                    <tr>
-                        <th align="left"> To </th>
-                        <th align="left"> Subject </th>
-                        <th align="left"> Status </th>
-                        <th align="left"> Error </th>
-                        <th align="left"> Timing </th>
-                    </tr>
-                </thead>
-                <tbody id="messages"></tbody>
-            </table>
-        </div>
-    </div>
+	<div class="ui-widget-content ui-corner-all">
+		<div class="ui-widget-header">
+			<span>System Components</span>
+		</div>
+		<div style="padding: 10px;">
+			<table class="jtable" cellspacing="1" cellpadding="1" width="100%">
+				<thead>
+					<tr>
+						<th align="left"> Component </th>
+						<th align="left"> Instance </th>
+						<th align="left"> Load </th>
+						<th align="left"> Heartbeat </th>
+						<th align="left"> Enabled? </th>
+						<th align="left"> Minutes Since Last Report </th>
+						<th align="left"> Log <span class="ui-icon ui-icon-info forceinline" title="Logfiles may not be available for all processes."></span></th>
+					</tr>
+				</thead>
+				<tbody id="processes"></tbody>
+			</table>
+		</div>
+	</div>
+	<br />
+	<div class="ui-widget-content ui-corner-all">
+		<div class="ui-widget-header" style="height: 20px;">
+			<div class="floatleft">
+				Current Users
+			</div>
+			<div id="show_log_link" class="security_log_link floatright pointer">
+				<img src="/static/images/icons/view_text_16.png" alt=""> View Login History
+			</div>
+		</div>
+		<div style="padding: 10px;">
+			<table class="jtable" cellspacing="1" cellpadding="1" width="100%">
+				<thead>
+					<tr>
+						<th align="left"> User </th>
+						<th align="left"> Login Time </th>
+						<th align="left"> Last Update </th>
+						<th align="left"> Address </th>
+						<th align="left"> Status </th>
+					</tr>
+				</thead>
+				<tbody id="users"></tbody>
+			</table>
+		</div>
+	</div>
+	<br />
+	<div class="ui-widget-content ui-corner-all">
+		<div class="ui-widget-header">
+			<span>Messenger Queue</span>
+		</div>
+		<div style="padding: 10px;">
+			<table class="jtable" cellspacing="1" cellpadding="1" width="100%">
+				<thead>
+					<tr>
+						<th align="left"> To </th>
+						<th align="left"> Subject </th>
+						<th align="left"> Status </th>
+						<th align="left"> Error </th>
+						<th align="left"> Timing </th>
+					</tr>
+				</thead>
+				<tbody id="messages"></tbody>
+			</table>
+		</div>
+	</div>
 </div>
 <div id="logfile_dialog" title="Logfile">
-    <pre class="log_results" id="logfile_text"></pre>
+	<pre class="log_results" id="logfile_text"></pre>
 </div>
